Working SendGrid mailing with email templates

--- a/Coolector.Services.Mailing/appsettings.production.json
+++ b/Coolector.Services.Mailing/appsettings.production.json
@@ -1,8 +1,8 @@
 ﻿{
   "mongoDb": {
     "connectionString": "mongodb://coolector-mongodb-prod:27017",
-    "database": "Coolector-Users",
-    "seed": false
+    "database": "Coolector-Mailing",
+    "seed": true
   },
   "rawRabbit": {
     "username": "guest",
@@ -30,6 +30,8 @@
   },
 	"sendGrid":{
 		"apiKey": "",
-		"apiUrl": "https://api.sendgrid.com/v3/"
+		"apiUrl": "https://api.sendgrid.com/v3/",
+		"defaultCulture": "en-gb",
+		"noReplyEmailAccount":"no-reply@coolector.tk"
 	}
 }
