--- a/Coolector.Services.Mailing/project.json
+++ b/Coolector.Services.Mailing/project.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "Coolector.Common": "1.0.*",
     "Autofac": "4.1.0",
-    "Lockbox.Client": "1.0.0-beta-1",
+    "Lockbox.Client": "1.0.0-beta-2",
+    "Exceptionless": "4.0.1922",
     "Nancy": "2.0.0-barneyrubble",
     "NLog.Extensions.Logging": "1.0.0-*",
     "MongoDB.Driver": "2.3.0",
