--- a/Coolector.Services.Mailing/project.json
+++ b/Coolector.Services.Mailing/project.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "Coolector.Common": "1.0.*",
+    "Coolector.Services.Users.Shared": "1.0.*",
     "Autofac": "4.1.0",
     "Lockbox.Client": "1.0.0-beta-2",
     "Exceptionless": "4.0.1922",
@@ -22,7 +23,7 @@
     "RawRabbit": "1.10.0",
     "RawRabbit.vNext": "1.10.0",
     "Newtonsoft.Json": "9.0.1",
-	  "System.Net.Http": "4.3.0"
+    "System.Net.Http": "4.3.0"
   },
   "frameworks": {
     "netcoreapp1.1": {
