Secured service and requests between services.

--- a/Coolector.Services.Mailing/appsettings.json
+++ b/Coolector.Services.Mailing/appsettings.json
@@ -2,7 +2,11 @@
   "exceptionless": {
 	  "enabled": false,
 	  "apiKey": ""
-  	},
+  },
+  "jwtToken": {
+		"secretKey": "fUX8wKznDYvQpErPaYP6TDzfTGSdx9JstKtFM6vjScCfDxKpxP",
+		"expiryDays": 1000000
+	},
   "mongoDb": {
     "connectionString": "mongodb://localhost:27017",
     "database": "Coolector-Mailing",
@@ -37,5 +41,9 @@
 		"apiUrl": "https://api.sendgrid.com/v3/",
 		"defaultCulture": "en-gb",
 		"noReplyEmailAccount":"no-reply@coolector.tk"
-	}
+	},
+  "service": {
+    "username": "user",
+    "password": "secret"
+  }
 }
