--- a/Collectively.Services.Mailing.Tests.EndToEnd/Collectively.Services.Mailing.Tests.EndToEnd.csproj
+++ b/Collectively.Services.Mailing.Tests.EndToEnd/Collectively.Services.Mailing.Tests.EndToEnd.csproj
@@ -16,11 +16,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../Collectively.Common/Collectively.Common/Collectively.Common.csproj" />
     <ProjectReference Include="../Collectively.Services.Mailing/Collectively.Services.Mailing.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Collectively.Common" Version="1.0.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170106-08" />
     <PackageReference Include="dotnet-test-mspec" Version="*" />
     <PackageReference Include="FluentAssertions" Version="4.18.0" />
