--- a/Collectively.Services.Mailing.Tests/Collectively.Services.Mailing.Tests.csproj
+++ b/Collectively.Services.Mailing.Tests/Collectively.Services.Mailing.Tests.csproj
@@ -16,10 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="../Collectively.Services.Mailing/Collectively.Services.Mailing.csproj" />
-    <ProjectReference Include="../../Collectively.Common/Collectively.Common/Collectively.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Collectively.Common" Version="1.0.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170106-08" />
     <PackageReference Include="FluentAssertions" Version="4.18.0" />
     <PackageReference Include="Machine.Specifications" Version="0.11.0" />
