--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ branches:
     - master
     - develop
 before_script:
-  - chmod a+x ./travis-build.sh
-  - chmod a+x ./run-tests.sh
-  - chmod a+x ./after-success.sh
+  - chmod a+x ./scripts/travis-build.sh
+  - chmod a+x ./scripts/run-tests.sh
+  - chmod a+x ./scripts/after-success.sh
 script:
-  - ./travis-build.sh
-  - ./run-tests.sh
+  - ./scripts/travis-build.sh
+  - ./scripts/run-tests.sh
 after_success:
-  - ./after-success.sh
+  - ./scripts/after-success.sh
 notifications:
   email:
     on_success: never
