--- a/tests/Collectively.Services.Mailing.Tests.EndToEnd/Collectively.Services.Mailing.Tests.EndToEnd.csproj
+++ b/tests/Collectively.Services.Mailing.Tests.EndToEnd/Collectively.Services.Mailing.Tests.EndToEnd.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <AssemblyName>Collectively.Services.Mailing.Tests</AssemblyName>
-    <PackageId>Collectively.Services.Mailing.Tests</PackageId>
+    <AssemblyName>Collectively.Services.Mailing.Tests.EndToEnd</AssemblyName>
+    <PackageId>Collectively.Services.Mailing.Tests.EndToEnd</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8</PackageTargetFallback>
     <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
@@ -15,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Collectively.Services.Mailing/Collectively.Services.Mailing.csproj" />
+    <ProjectReference Include="../../src/Collectively.Services.Mailing/Collectively.Services.Mailing.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,7 +25,8 @@
     <PackageReference Include="Machine.Specifications" Version="0.11.0" />
     <PackageReference Include="Machine.Specifications.Should" Version="0.11.0" />
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.*" />
-    <PackageReference Include="Moq" Version="4.*" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.0" />
     <PackageReference Include="Collectively.Common" Version="1.0.*" />
     <PackageReference Include="Collectively.Messages" Version="1.0.*" />
   </ItemGroup>
