--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches:
 before_script:
   - chmod a+x ./scripts/travis-build.sh
   - chmod a+x ./scripts/run-tests.sh
+  - chmod a+x ./scripts/dotnet-publish.sh
+  - chmod a+x ./scripts/docker-publish-ci.sh
   - chmod a+x ./scripts/after-success.sh
 script:
   - ./scripts/travis-build.sh
