--- a/src/Collectively.Services.Mailing/Dockerfile
+++ b/src/Collectively.Services.Mailing/Dockerfile
@@ -2,4 +2,4 @@ FROM microsoft/dotnet:runtime
 WORKDIR /dotnetapp
 COPY ./bin/Docker .
 ENV ASPNETCORE_ENVIRONMENT docker
-ENTRYPOINT dotnet Collectively.Services.Mailing
+ENTRYPOINT dotnet Collectively.Services.Mailing.dll
