Updated mongodb name

--- a/src/Collectively.Services.Mailing/appsettings.json
+++ b/src/Collectively.Services.Mailing/appsettings.json
@@ -9,7 +9,7 @@
 	},
   "mongoDb": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "Collectively-Mailing",
+    "database": "Collectively-Services-Mailing",
     "seed": true
   },
   "rawRabbit": {
