--- a/src/Collectively.Services.Mailing/appsettings.development.json
+++ b/src/Collectively.Services.Mailing/appsettings.development.json
@@ -1,7 +1,7 @@
 ﻿{
   "mongoDb": {
     "connectionString": "mongodb://172.17.0.8:27017",
-    "database": "Collectively-Mailing",
+    "database": "Collectively-Services-Mailing",
     "seed": true
   },
   "rawRabbit": {
