Updated project properties

--- a/src/Collectively.Services.Mailing/Collectively.Services.Mailing.csproj
+++ b/src/Collectively.Services.Mailing/Collectively.Services.Mailing.csproj
@@ -1,18 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <AssemblyTitle>Collectively.Services.Users</AssemblyTitle>
+    <AssemblyTitle>Collectively.Services.Mailing</AssemblyTitle>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>Collectively.Services.Mailing</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>Collectively.Services.Mailing</PackageId>
     <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
   </PropertyGroup>
 
   <ItemGroup>
