JWT RSA refactoring

--- a/src/Collectively.Services.Mailing/appsettings.json
+++ b/src/Collectively.Services.Mailing/appsettings.json
@@ -5,7 +5,7 @@
   },
   "jwtToken": {
 		"secretKey": "fUX8wKznDYvQpErPaYP6TDzfTGSdx9JstKtFM6vjScCfDxKpxP",
-		"expiryDays": 1000000
+		"expiryDays": 100
 	},
   "mongoDb": {
     "connectionString": "mongodb://localhost:27017",
