--- a/src/Collectively.Services.Mailing/appsettings.json
+++ b/src/Collectively.Services.Mailing/appsettings.json
@@ -41,6 +41,15 @@
 		"apiUrl": "https://api.sendgrid.com/v3/",
 		"defaultCulture": "en-gb",
 		"noReplyEmailAccount":"no-reply@collectively.tk"
+  },
+	"serilog": {
+		"level": "Debug",
+		"indexFormat": "",
+		"elkEnabled": false,
+		"useBasicAuth": false,
+		"apiUrl": "",
+		"username": "",
+		"password": ""
 	},
   "service": {
     "username": "user",
