--- a/src/Collectively.Services.Mailing/appsettings.json
+++ b/src/Collectively.Services.Mailing/appsettings.json
@@ -40,11 +40,13 @@
 		"apiKey": "",
 		"apiUrl": "https://api.sendgrid.com/v3/",
 		"defaultCulture": "en-gb",
-		"noReplyEmailAccount":"no-reply@collectively.tk"
+    "noReplyEmailAccount":"no-reply@becollective.ly",
+    "supportEmailAccount":"info@noordwind.com"
   },
 	"serilog": {
 		"level": "Debug",
-		"indexFormat": "",
+    "indexFormat": "",
+    "consoleEnabled": true,
 		"elkEnabled": false,
 		"useBasicAuth": false,
 		"apiUrl": "",
