--- a/src/Collectively.Services.Mailing/appsettings.json
+++ b/src/Collectively.Services.Mailing/appsettings.json
@@ -41,7 +41,7 @@
 		"apiUrl": "https://api.sendgrid.com/v3/",
 		"defaultCulture": "en-gb",
     "noReplyEmailAccount":"no-reply@becollective.ly",
-    "supportEmailAccount":"info@noordwind.com"
+    "supportEmailAccount":"spetz90@gmail.com"
   },
 	"serilog": {
 		"level": "Debug",
